# reenigne

./: .env.example  .gitignore  LICENSE  Makefile  README.md  package.json  ruff.toml
.github/workflows/: ci.yml  claude-investigate.yml
apps/api/: .env.example  .vercelignore  README.md  pyproject.toml  pytest.ini  requirements.txt  vercel.json
apps/api/api/: index.py
apps/api/app/: __init__.py  auth.py  config.py  db.py  feedback.py  github.py  jobs.py  llm.py  main.py  prompts.py  queue.py  ratelimit.py  runner_loop.py  stripe_billing.py  supabase_auth.py  triage.py
apps/api/reenigne_prompts/: __init__.py
apps/api/tests/: conftest.py  test_anthropic_response.py  test_auth.py  test_billing_webhook.py  test_config.py  test_credits.py  test_enqueue_atomicity.py  test_feedback_intake.py  test_github_filing.py  test_job_accounting.py  test_jobs_api.py  test_jobs_queue.py  test_metering.py  test_model_allowlist.py  test_plans_parity.py  test_prompt_single_source.py  test_quota.py  test_rate_limit.py  test_runner_budget.py  test_schema_types.py  test_triage.py  test_uuid_inputs.py
apps/api/tests/support/: supabase_shim.sql
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/web/: .env.example  README.md  package-lock.json  package.json
docs/: DEPLOY.md  PRD.md  architecture.md  component-map.md  desktop-first-run-checklist.md  feedback-pipeline.md
scripts/: build-worker.sh  deploy-vercel.sh  package-desktop.sh  verify-bundle.sh
supabase/: config.toml
supabase/migrations/: 20260719_analysis_jobs.sql  (+7 more)
(+28 files in other folders)
